[table] Stretching tables when needed due to self-alignment properties

The Self-Alignment properties, align-self and justify-self, apply to
tables when they are flex or grid items.

This patch addresses only the issue of applying the stretch value, which
effectively affects the size of the table in those cases.

The justify-self applies also to tables when they are block-level
boxes, but the alignment feature is still not implemented for that
case, so for now the related test cases expect no stretching.

Other values of alignment aren't implemented yet for tables, but those
will be part of future CLs, once somebody files the appropriated bug.

BUG=667785

Review-Url: https://codereview.chromium.org/2528253003
Cr-Commit-Position: refs/heads/master@{#454743}

Former-commit-id: a90dba1f2dd094e51229dd2e5e059c6b53cee93a